<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.fragments.UserProfileFragment">

    <ImageView
        android:id="@+id/ivNotify"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/notify" />

    <TextView
        android:id="@+id/tvWarning"
        style="?attr/textAppearanceHeadline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/warning"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivNotify" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tvGoToSignInScreen"
        style="?attr/textAppearanceSubtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="6dp"
        android:background="@drawable/learn_more_button"
        android:text="@string/go_to_sign_in_screen"
        android:textColor="@drawable/text_button_text_color"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWarning" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signInUserProfileLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivUserProfilePicture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeableImageViewUserProfileRoundCorners" />

        <TextView
            android:id="@+id/tvUserName"
            style="?attr/textAppearanceHeadline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/ivUserProfilePicture"
            app:layout_constraintStart_toStartOf="@id/ivUserProfilePicture"
            app:layout_constraintTop_toBottomOf="@id/ivUserProfilePicture"
            tools:text="User Name" />

        <TextView
            android:id="@+id/tvUserEmail"
            style="?attr/textAppearanceSubtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/gray_700"
            app:layout_constraintEnd_toEndOf="@id/ivUserProfilePicture"
            app:layout_constraintStart_toStartOf="@id/ivUserProfilePicture"
            app:layout_constraintTop_toBottomOf="@id/tvUserName"
            tools:text="testuseremail@email.com" />

        <View
            android:id="@+id/line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="@dimen/side_margin"
            android:background="@color/light_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvUserEmail" />

        <TextView
            android:id="@+id/tvFavorites"
            style="?attr/textAppearanceHeadline6"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="@dimen/side_margin"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/favorites"
            android:textSize="18sp"
            app:drawableEndCompat="@drawable/ic_arrow_forward"
            app:drawableStartCompat="@drawable/ic_favorite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line" />

        <TextView
            android:id="@+id/tvBookmarks"
            style="?attr/textAppearanceHeadline6"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/side_margin"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/bookmarks"
            android:textSize="18sp"
            app:drawableEndCompat="@drawable/ic_arrow_forward"
            app:drawableStartCompat="@drawable/ic_bookmark_outlined"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFavorites" />

        <TextView
            android:id="@+id/tvSingOut"
            style="?attr/textAppearanceHeadline6"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/side_margin"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/sign_out"
            android:textSize="18sp"
            android:textColor="@color/red_700"
            app:drawableStartCompat="@drawable/ic_sign_out"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvBookmarks" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>