<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context=".ui.fragments.SearchNewsFragment">

    <TextView
        android:id="@+id/tvDiscover"
        style="?attr/textAppearanceHeadline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/side_margin"
        android:layout_marginTop="@dimen/extra_large_margin"
        android:text="@string/discover"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDiscoverDescription"
        style="?attr/textAppearanceSubtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/discover_description"
        android:textColor="@color/dark_gray"
        app:layout_constraintStart_toStartOf="@id/tvDiscover"
        app:layout_constraintTop_toBottomOf="@id/tvDiscover" />

    <!-- Test different layout_height values -->
    <!-- Add the search icon at left side -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSearch"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/side_margin"
        android:layout_marginTop="@dimen/extra_large_margin"
        android:layout_marginEnd="@dimen/side_margin"
        android:textColorHint="@color/dark_gray"
        app:boxBackgroundColor="@color/gray_200"
        app:boxCornerRadiusBottomEnd="14dp"
        app:boxCornerRadiusBottomStart="14dp"
        app:boxCornerRadiusTopEnd="14dp"
        app:boxCornerRadiusTopStart="14dp"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDiscoverDescription"
        app:startIconDrawable="@drawable/ic_search_black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSearch"
            style="?attr/textAppearanceSubtitle2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/search"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Change background color to gray -->
    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/recycler_view_padding"
        android:layout_marginTop="@dimen/extra_large_margin"
        android:layout_marginEnd="@dimen/recycler_view_padding"
        android:background="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilSearch" />

    <ImageView
        android:id="@+id/ivSearchImage"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:srcCompat="@drawable/search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSearchNews"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/extra_large_margin"
        android:layout_marginBottom="@dimen/bottom_nav_height"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line"
        tools:listitem="@layout/item_news_preview" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?attr/progressBarStyle"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/navy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/rvSearchNews"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/rvSearchNews" />
</androidx.constraintlayout.widget.ConstraintLayout>